--- a/locale/commands.ua.json
+++ b/locale/commands.ua.json
@@ -56,7 +56,11 @@
      "execute":      "запустити",
      "running":      "виконується",
      "prev":         "попередня версія",
-     "next":         "наступна версія"
+     "next":         "наступна версія",
+     "first":        "перша версія",
+     "last":         "остання версія",
+     "minimize":     "зображення зменшити",
+     "maximize":     "зображення збільшити"
    },
 
    "quiz": {
@@ -70,6 +74,6 @@
    "survey": {
      "submit":       "відіслати",
      "submitted":    "дякую",
-     "text":         "Ввід тексту ..." 
+     "text":         "Ввід тексту ..."
    }
 }
